--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,10 @@
     "outDir": "dist",
     "sourceMap": true,
     "lib": ["es2022"],
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     }
-  }
+  },
+  "exclude": ["node_modules", "node_modules/*"]
 }
