--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "graphql api for woovy test",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.js",
+    "build": "webpack --config webpack.js --output public",
     "start": "node build/graphql.js",
     "dev": "concurrently \"webpack --watch --progress --config webpack.js\" \"nodemon build/graphql.js\"",
     "test": "jest --detectOpenHandles"
