--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "woovy-crud-api",
   "version": "1.0.0",
   "description": "graphql api for woovy test",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "build": "webpack --config webpack.js",
     "start": "node dist/graphql.js",
@@ -36,7 +36,6 @@
     "koa-logger": "^3.2.1",
     "koa-router": "12.0.0",
     "mongoose": "^8.4.5",
-    "pre-commit": "^1.2.2",
     "ts-jest": "^29.2.0",
     "ts-node": "^10.9.2"
   },
