fix: vercel json

--- a/vercel.json
+++ b/vercel.json
@@ -9,25 +9,12 @@
                     "dist/**"
                 ]
             }
-        },
-        {
-            "src": "dist/index.js",
-            "use": "@vercel/node",
-            "config": {
-                "includeFiles": [
-                    "dist/**"
-                ]
-            }
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "dist/index.js"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "dist/graphql.js"
+            "dest": "/dist/graphql.js"
         }
     ]
 }
