--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "dist/index.js",
-            "use": "@vercel/node",
-            "config": {
-                "includeFiles": [
-                    "dist/**"
-                ]
-            }
+            "src": "src/index.ts",
+            "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/dist/index.js"
+            "dest": "/src/index.ts"
         }
     ]
 }
