--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "lib": ["es2022"]
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/modules/**/__tests__"]
 }
