feat: add scripts to deploy phase

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,9 @@
             "use": "@vercel/node"
         }
     ],
+    "scripts": {
+        "build": "rimraf dist && tsc && tsc-alias"
+    },
     "routes": [
         {
             "src": "/(.*)",
