--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
 PORT=3001
 NODE_ENV=development
 SECRET_TOKEN=secret1235
-MONGO_URL=mongodb+srv://rodsguilherme:GOPWkNEpdgAtyyEl@woovy.j8npo5x.mongodb.net
+MONGO_URL=
